<resources>
    <string name="app_name">Spy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="letsspy">Lets Spy</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="LetsSpy">Lets Spy</string>
    <string name="RePassword">Re Password</string>
    <string name="Number">Number</string>
    <string name="Name">Name</string>
    <string name="SignUP">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="btnSend">Send</string>
    <string name="fastAdd">Fast Add</string>
    <string name="sms">Sms</string>
    <string name="calls">Calls</string>
    <string name="gbs">Gbs</string>


    <string name="returntonumbers">Return To Numbers</string>
    <string name="search">Search</string>
</resources>
