<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raghad12_1_2016.spy.Settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSms"
            android:text="@string/sms"
            android:layout_weight="0.05" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalls"
            android:layout_gravity="center_horizontal"
            android:text="@string/calls"
            android:layout_weight="0.04" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGbs"
            android:layout_gravity="center_horizontal"
            android:text="@string/gbs"
            android:layout_weight="0.03" />

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/returntonumbers"
            android:id="@+id/btnReturn"
            android:layout_gravity="right" />

    </LinearLayout>
</RelativeLayout>
