<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raghad12_1_2016.spy.AddNumbers">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etNumber1"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName1"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etNumber2"
            android:hint="@string/Number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName2"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Name" />

        <ImageButton
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:id="@+id/ibPlus"
            android:layout_gravity="right"
            android:layout_weight="0.12"
            android:src="@mipmap/pluss" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btnNext"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
